--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "4.x"
   },
   "devDependencies": {
+    "history": "^5.0.0",
     "nwb": "0.25.x",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
